# LLMOPS--anime_recomender

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.py
config/: config.py
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  retrivers.py  vector_store.py
